Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/staticImport/PrivateStaticImport.out
PrivateStaticImport.java:18:17: compiler.err.cant.resolve.location: kindname.variable, FOO_VALUE, , , (compiler.misc.location: kindname.class, psi.Bar, null)
1 error
